# github-pipeline-triage

./: .bumpversion.cfg  .gitignore  AGENTS.md  CHANGELOG.md  README.md  SPEC.md  mcp.json  pyproject.toml  server.json
scripts/: install-skill.py
skills/github_pipeline_triage/: SKILL.md
src/github_pipeline_triage/: __init__.py  __main__.py
src/github_pipeline_triage/adapters/: __init__.py  cache.py  gh.py
src/github_pipeline_triage/api/: __init__.py  server.py
src/github_pipeline_triage/cli/: __init__.py  commands.py
src/github_pipeline_triage/core/: __init__.py  classify.py  constants.py  duplicates.py  pr_suspicion.py  types.py
src/github_pipeline_triage/db/: __init__.py  client.py  schema.py
src/github_pipeline_triage/services/: __init__.py  audit.py  pipeline.py  render.py
tests/: conftest.py  test_api.py  test_api_server.py  test_audit.py  test_cache.py  test_classify.py  test_cli_imports.py  test_core_extended.py  test_db.py  test_duplicates.py  test_final.py  test_gh.py  test_pipeline.py  test_pr_suspicion.py  test_render.py  test_types.py
