[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-pipeline-triage"
version = "0.1.0"
description = "Automated GitHub issue and PR triage system with heuristic classification"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Dario Clavijo", email = "clavijodario@gmail.com"}
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "toml>=0.10.2",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "hatch",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "hypothesis",
]
lint = [
    "ruff",
    "mypy",
]
all = ["github-pipeline-triage[dev,test,lint]"]

[project.scripts]
github-pipeline-triage = "github_pipeline_triage.__main__:main"

[project.urls]
Homepage = "https://github.com/dclavijo/github-pipeline-triage"
Repository = "https://github.com/dclavijo/github-pipeline-triage"
Issues = "https://github.com/dclavijo/github-pipeline-triage/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/github_pipeline_triage"]

[tool.hatch.build.targets.sdist]
include = ["src/github_pipeline_triage"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-fail-under=80"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude = ["tests/*", "*/__init__.py"]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
